# Point2Mesh

./: .gitignore
Point2Mesh/: CMakeLists.txt  CMakeSettings.json  bun_zipper.xyz  tex.xyz  zig.xyz
Point2Mesh/data/: better_cube.xyz
Point2Mesh/src/: CMakeLists.txt  clock.cpp  clock.h  edge.cpp  edge.h  main.cpp  meshconvert.cpp  meshconvert.h  ocnode.cpp  ocnode.h  ocsearch.cpp  ocsearch.h  octree.cpp  octree.h  sphere.cpp  sphere.h  test.xyz  testing.h  triangle.cpp  triangle.h  types.h  utils.cpp  utils.h  vertex.cpp  vertex.h
data_structure/test/: edge.cpp  edge.h  main.cpp  sphere.h  triangle.cpp  triangle.h  vertex.cpp  vertex.h
data_structure/test.xcodeproj/: project.pbxproj
data_structure/test.xcodeproj/project.xcworkspace/xcuserdata/cui.xcuserdatad/: UserInterfaceState.xcuserstate
data_structure/test.xcodeproj/xcuserdata/cui.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
docs/: final_report.html  index.html  milestone.html  proposal.html
ply_to_xyz/: bun_zipper.ply  ply_to_xyz.ipynb
ply_to_xyz/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  ply_to_xyz-checkpoint.ipynb
ply_to_xyz/xyz files/: bun_zipper.xyz
utils/: build_fake_pcd.ipynb  normal.txt  to_dae.ipynb
utils/.ipynb_checkpoints/: to_dae-checkpoint.ipynb
utils/ply_to_xyz/: cube.ply  cube.xyz  output.ply  ply_to_xyz.ipynb  tex.ply  tex.xyz
utils/ply_to_xyz/.ipynb_checkpoints/: ply_to_xyz-checkpoint.ipynb
